imagenes y header (un poco)

--- a/portal-consulting/src/mapa-del-sitio/clientes.html
+++ b/portal-consulting/src/mapa-del-sitio/clientes.html
@@ -10,18 +10,44 @@
     <header>
         <div class="header-inner container" role="banner">
             <a class="logo" href="inicio.html">
-                <img src="portal logo.jpg" alt="Portal logo">
+                <img src="logo_106x81.png" alt="Portal logo">
                 <span>Portal</span>
             </a>
+
+            <!-- Reemplaza el link existente en el nav con esto -->
             <nav role="navigation" aria-label="Principal">
                 <a href="inicio.html">Inicio</a>
-                <a href="porque-elegir-portal.html">Porqué elegir Portal?</a>
-                <a href="servicios.html">Servicios</a>
+
+                <div class="dropdown" id="dropdown-why">
+                    <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-why">
+                        ¿Por qué Portal? <span class="arrow">▾</span>
+                    </button>
+                    <div id="menu-why" class="dropdown-content" role="menu" aria-hidden="true">
+                        <a role="menuitem" href="porque-elegir-portal.html">¿Por qué elegirnos?</a>
+                        <a role="menuitem" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
+                        <a role="menuitem" href="opiniones-cliente.html">Opiniones de Clientes</a>
+                    </div>
+                </div>
+
+                <!-- Nuevo dropdown: Servicios -->
+                <div class="dropdown" id="dropdown-services">
+                    <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-services">
+                        Servicios <span class="arrow">▾</span>
+                    </button>
+                    <div id="menu-services" class="dropdown-content" role="menu" aria-hidden="true">
+                        <a role="menuitem" href="servicios.html">Resumen de Servicios</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/diseno-web.html">Diseño Web</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/web-adaptativas.html">Web Adaptativas</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/web-autoadministrables.html">Web Autoadministrables</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/hosting.html">Hosting</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/actualizacion-web.html">Actualización de Páginas</a>
+                    </div>
+                </div>
+
                 <a href="portfolio.html">Portfolio</a>
-                <a href="clientes.html" aria-current="page">Clientes</a>
+                <a href="clientes.html">Clientes</a>
                 <a href="opiniones-cliente.html">Opiniones</a>
-                <a href="preguntas-frecuentes.html">Preguntas frecuentes</a>
-                <a href="contacto.html" class="btn btn--ghost">Contacto</a>
+                <a href="contacto.html" class="btn btn--primary">Contacto</a>
             </nav>
         </div>
     </header>
