--- a/portal-consulting/src/servicios/actualizacion-web.html
+++ b/portal-consulting/src/servicios/actualizacion-web.html
@@ -10,7 +10,10 @@
     <header>
         <div class="header-inner container" role="banner">
             <a class="logo" href="../mapa-del-sitio/inicio.html">
-                <img src="../assets/logo_106x81.png" alt="Portal logo">
+                <img src="../mapa-del-sitio/logo_106x81.png"
+                     srcset="../mapa-del-sitio/logo_212x162.png 2x, ../mapa-del-sitio/logo_318x243.png 3x, ../mapa-del-sitio/logo.svg 1x"
+                     sizes="(max-width:800px) 120px, 140px"
+                     alt="Portal logo">
                 <span>Portal</span>
             </a>
 
