--- a/portal-consulting/src/servicios/hosting.html
+++ b/portal-consulting/src/servicios/hosting.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-inner container" role="banner">
             <a class="logo" href="../mapa-del-sitio/inicio.html">
-                <img src="../assets/logo_106x81.png" alt="Portal logo">
+                <img src="../mapa-del-sitio/logo_106x81.png" alt="Portal logo">
                 <span>Portal</span>
             </a>
 
