--- a/portal-consulting/src/mapa-del-sitio/inicio.html
+++ b/portal-consulting/src/mapa-del-sitio/inicio.html
@@ -7,50 +7,51 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header>
-        <div class="header-inner container" role="banner">
-            <a class="logo" href="inicio.html">
-                <img src="logo_106x81.png" alt="Portal logo">
-                <span>Portal</span>
-            </a>
+<header>
+    <div class="header-inner container" role="banner">
+        <a class="logo" href="inicio.html">
+            <img src="logo_106x81.png"
+                 srcset="logo_212x162.png 2x, logo_318x243.png 3x, logo.svg 1x"
+                 sizes="(max-width:800px) 120px, 140px"
+                 alt="Portal logo">
+            <span>Portal</span>
+        </a>
 
-            <!-- Reemplaza el link existente en el nav con esto -->
-            <nav role="navigation" aria-label="Principal">
-        <a href="inicio.html">Inicio</a>
+        <nav role="navigation" aria-label="Principal">
+            <a href="inicio.html">Inicio</a>
 
-        <div class="dropdown" id="dropdown-why">
-            <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-why">
-                ¿Por qué Portal? <span class="arrow">▾</span>
-            </button>
-            <div id="menu-why" class="dropdown-content" role="menu" aria-hidden="true">
-                <a role="menuitem" href="porque-elegir-portal.html">¿Por qué elegirnos?</a>
-                <a role="menuitem" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
-                <a role="menuitem" href="opiniones-cliente.html">Opiniones de Clientes</a>
+            <div class="dropdown" id="dropdown-why">
+                <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-why">
+                    ¿Por qué Portal? <span class="arrow">▾</span>
+                </button>
+                <div id="menu-why" class="dropdown-content" role="menu" aria-hidden="true">
+                    <a role="menuitem" href="porque-elegir-portal.html">¿Por qué elegirnos?</a>
+                    <a role="menuitem" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
+                    <a role="menuitem" href="opiniones-cliente.html">Opiniones de Clientes</a>
+                </div>
             </div>
-        </div>
 
-        <!-- Nuevo dropdown: Servicios -->
-        <div class="dropdown" id="dropdown-services">
-            <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-services">
-                Servicios <span class="arrow">▾</span>
-            </button>
-            <div id="menu-services" class="dropdown-content" role="menu" aria-hidden="true">
-                <a role="menuitem" href="servicios.html">Resumen de Servicios</a>
-                <a role="menuitem" href="/portal-consulting/src/servicios/diseno-web.html">Diseño Web</a>
-                <a role="menuitem" href="/portal-consulting/src/servicios/web-adaptativas.html">Web Adaptativas</a>
-                <a role="menuitem" href="/portal-consulting/src/servicios/web-autoadministrables.html">Web Autoadministrables</a>
-                <a role="menuitem" href="/portal-consulting/src/servicios/hosting.html">Hosting</a>
-                <a role="menuitem" href="/portal-consulting/src/servicios/actualizacion-web.html">Actualización de Páginas</a>
+            <div class="dropdown" id="dropdown-services">
+                <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-services">
+                    Servicios <span class="arrow">▾</span>
+                </button>
+                <div id="menu-services" class="dropdown-content" role="menu" aria-hidden="true">
+                    <a role="menuitem" href="servicios.html">Resumen de Servicios</a>
+                    <a role="menuitem" href="../servicios/diseno-web.html">Diseño Web</a>
+                    <a role="menuitem" href="../servicios/web-adaptativas.html">Web Adaptativas</a>
+                    <a role="menuitem" href="../servicios/web-autoadministrables.html">Web Autoadministrables</a>
+                    <a role="menuitem" href="../servicios/hosting.html">Hosting</a>
+                    <a role="menuitem" href="../servicios/actualizacion-web.html">Actualización de Páginas</a>
+                </div>
             </div>
-        </div>
 
-        <a href="portfolio.html">Portfolio</a>
-        <a href="clientes.html">Clientes</a>
-        <a href="opiniones-cliente.html">Opiniones</a>
-        <a href="contacto.html" class="btn btn--primary">Contacto</a>
-    </nav>
-        </div>
-    </header>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="clientes.html">Clientes</a>
+            <a href="opiniones-cliente.html">Opiniones</a>
+            <a href="contacto.html" class="btn btn--primary">Contacto</a>
+        </nav>
+    </div>
+</header>
 
     <main>
         <!-- Hero Section -->
@@ -65,7 +66,8 @@
                 </div>
             </div>
             <div class="hero-image zoom-in">
-                <img src="../assets/hero-illustration.svg" alt="Diseño web profesional">
+                <!-- imagen subida: "hero illustration.jpg" -->
+                <img src="../assets/hero-illustration.jpg" alt="Diseño web profesional">
             </div>
         </section>
 
