--- a/portal-consulting/src/mapa-del-sitio/porque-elegir-portal.html
+++ b/portal-consulting/src/mapa-del-sitio/porque-elegir-portal.html
@@ -28,7 +28,20 @@
                     </div>
                 </div>
 
-                <a href="servicios.html">Servicios</a>
+                <div class="dropdown" id="dropdown-services">
+                    <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-services">
+                        Servicios <span class="arrow">▾</span>
+                    </button>
+                    <div id="menu-services" class="dropdown-content" role="menu" aria-hidden="true">
+                        <a role="menuitem" href="servicios.html">Resumen de Servicios</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/diseno-web.html">Diseño Web</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/web-adaptativas.html">Web Adaptativas</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/web-autoadministrables.html">Web Autoadministrables</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/hosting.html">Hosting</a>
+                        <a role="menuitem" href="/portal-consulting/src/servicios/actualizacion-web.html">Actualización de Páginas</a>
+                    </div>
+                </div>
+
                 <a href="portfolio.html">Portfolio</a>
                 <a href="clientes.html">Clientes</a>
                 <a href="opiniones-cliente.html">Opiniones</a>
