--- a/portal-consulting/src/servicios/diseno-web.html
+++ b/portal-consulting/src/servicios/diseno-web.html
@@ -10,11 +10,11 @@
     <header>
         <div class="header-inner container" role="banner">
             <a class="logo" href="../mapa-del-sitio/inicio.html">
-                <img src="../assets/logo_106x81.png" alt="Portal logo">
+                <img src="../mapa-del-sitio/logo_106x81.png" alt="Portal logo">
                 <span>Portal</span>
             </a>
 
-            <!-- Navegación consistente con inicio.html -->
+            <!-- Reemplaza el link existente en el nav con esto -->
             <nav role="navigation" aria-label="Principal">
                 <a href="../mapa-del-sitio/inicio.html">Inicio</a>
 
@@ -29,6 +29,7 @@
                     </div>
                 </div>
 
+                <!-- Nuevo dropdown: Servicios -->
                 <div class="dropdown" id="dropdown-services">
                     <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-services">
                         Servicios <span class="arrow">▾</span>
